# Milestone-1

./: CMakeLists.txt  README.md  details.txt  ex3.h  fly.txt  fly_with_func.txt  main.cpp  newLexer
commands/: Command.cpp  Commands.h  ConnectCommand.cpp  DefineVarCommand.cpp  IfCommand.cpp  LoopCommand.cpp  OpenServerCommand.cpp  PrintCommand.cpp  SetVariableCommand.cpp  SleepCommand.cpp
interpreter/: ex1.cpp  ex1.h
lexer/: Lexer.cpp  Lexer.h
